Creating more issues than solving them - issues with pytorch & cuda after installing tensorboard

--- a/train_dev.ipynb
+++ b/train_dev.ipynb
@@ -2,39 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "/lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/functorch/../torch/lib/libc10_cuda.so: undefined symbol: _ZN3c104impl8GPUTrace13gpuTraceStateE",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdataset\u001b[39;00m      \u001b[39mas\u001b[39;00m \u001b[39mds\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtrain\u001b[39;00m        \u001b[39mas\u001b[39;00m \u001b[39mtr\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mneuralODE\u001b[39;00m    \u001b[39mas\u001b[39;00m \u001b[39mnODE\u001b[39;00m\n",
+      "File \u001b[0;32m~/MACE/MACE/src/mace/neuralODE.py:4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m        \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m    \n\u001b[0;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorchode\u001b[39;00m     \u001b[39mas\u001b[39;00m \u001b[39mto\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mautoencoder\u001b[39;00m  \u001b[39mas\u001b[39;00m \u001b[39mae\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstats\u001b[39;00m    \u001b[39mimport\u001b[39;00m gmean\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.9/site-packages/torchode/__init__.py:5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m\"\"\"A parallel ODE solver for PyTorch\"\"\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m __version__ \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m0.1.9\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39madjoints\u001b[39;00m \u001b[39mimport\u001b[39;00m AutoDiffAdjoint, BacksolveAdjoint, JointBacksolveAdjoint\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39minterface\u001b[39;00m \u001b[39mimport\u001b[39;00m register_method, solve_ivp\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mproblems\u001b[39;00m \u001b[39mimport\u001b[39;00m InitialValueProblem\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.9/site-packages/torchode/adjoints.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtyping\u001b[39;00m \u001b[39mimport\u001b[39;00m Any, Dict, Optional\n\u001b[0;32m----> 3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mfunctorch\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnn\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.9/site-packages/functorch/__init__.py:7\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Copyright (c) Facebook, Inc. and its affiliates.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# All rights reserved.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# This source code is licensed under the BSD-style license found in the\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m# LICENSE file in the root directory of this source tree.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m _C\n\u001b[1;32m      9\u001b[0m \u001b[39m# Top-level APIs. Please think carefully before adding something to the\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[39m# top-level namespace:\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39m# - private helper functions should go into torch._functorch\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     14\u001b[0m \n\u001b[1;32m     15\u001b[0m \u001b[39m# Was never documented\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_functorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpython_key\u001b[39;00m \u001b[39mimport\u001b[39;00m make_fx\n",
+      "\u001b[0;31mImportError\u001b[0m: /lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/functorch/../torch/lib/libc10_cuda.so: undefined symbol: _ZN3c104impl8GPUTrace13gpuTraceStateE"
+     ]
+    }
+   ],
    "source": [
     "import numpy             as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib        as mpl\n",
     "import sys\n",
     "import tqdm\n",
-    "\n",
     "import torch\n",
-    "import torch.nn          as nn\n",
-    "from torch.utils.data    import Dataset, DataLoader\n",
-    "from torch.optim         import Adam\n",
     "\n",
-    "from matplotlib          import rcParams, rc\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
+    "from matplotlib          import rcParams\n",
     "rcParams.update({'figure.dpi': 200})\n",
     "mpl.rcParams.update({'font.size': 8})\n",
     "plt.rcParams['figure.dpi'] = 150\n",
-    "\n",
     "\n",
     "## import own functions\n",
     "sys.path.insert(1, '/lhome/silkem/MACE/MACE/src/mace')\n",
     "import autoencoder  as ae\n",
     "import dataset      as ds\n",
-    "import plotting     as pl\n",
     "import train        as tr\n",
     "import neuralODE    as nODE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,17 +80,40 @@
    ],
    "source": [
     "dirname = 'easy-mace2'\n",
+    "writer = SummaryWriter('runs/'+dirname)\n",
     "\n",
     "train, data_loader, test_loader = ds.get_data(dirname = dirname, batch_size=batch_size, kwargs=kwargs, plot = True, scale = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nODE' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[39m=\u001b[39m nODE\u001b[39m.\u001b[39mSolver(p_dim\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m,z_dim \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m, n_dim\u001b[39m=\u001b[39m\u001b[39m466\u001b[39m, DEVICE \u001b[39m=\u001b[39m DEVICE)\n\u001b[1;32m      2\u001b[0m writer\u001b[39m.\u001b[39madd_graph(model)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nODE' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "model = nODE.Solver(p_dim=4,z_dim = 10, n_dim=466, DEVICE = DEVICE)\n",
+    "writer.add_graph(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = nODE.Solver(p_dim=4,z_dim = 10, n_dim=466, DEVICE = DEVICE)"
+    "writer.close()"
    ]
   },
   {
@@ -94,16 +129,36 @@
       "learning rate: 0.01\n",
       "\n",
       ">>> Training model...\n",
-      "{'n_f_evals': tensor([1862]), 'n_steps': tensor([310]), 'n_accepted': tensor([156]), 'n_initialized': tensor([3])}\n",
-      "{'n_f_evals': tensor([1922]), 'n_steps': tensor([320]), 'n_accepted': tensor([165]), 'n_initialized': tensor([4])}\n",
+      "len tstep     torch.Size([1, 12])\n",
+      "stats         {'n_f_evals': tensor([1850]), 'n_steps': tensor([308]), 'n_accepted': tensor([155]), 'n_initialized': tensor([3])}\n",
+      "status        tensor([4])\n",
+      "torch.Size([1, 12, 10])\n",
+      "len tstep     torch.Size([1, 16])\n",
+      "stats         {'n_f_evals': tensor([2102]), 'n_steps': tensor([350]), 'n_accepted': tensor([195]), 'n_initialized': tensor([4])}\n",
+      "status        tensor([4])\n",
+      "torch.Size([1, 16, 10])\n",
+      "len tstep     torch.Size([1, 106])\n",
+      "stats         {'n_f_evals': tensor([1748]), 'n_steps': tensor([291]), 'n_accepted': tensor([146]), 'n_initialized': tensor([1])}\n",
+      "status        tensor([4])\n",
+      "torch.Size([1, 106, 10])\n",
+      "len tstep     torch.Size([1, 17])\n",
+      "stats         {'n_f_evals': tensor([1700]), 'n_steps': tensor([283]), 'n_accepted': tensor([142]), 'n_initialized': tensor([1])}\n",
+      "status        tensor([4])\n",
+      "torch.Size([1, 17, 10])\n",
       "\n",
       "\t\t# nan: 1 / 4638\n",
-      "{'n_f_evals': tensor([1940]), 'n_steps': tensor([323]), 'n_accepted': tensor([169]), 'n_initialized': tensor([3])}\n",
+      "len tstep     torch.Size([1, 15])\n",
+      "stats         {'n_f_evals': tensor([1706]), 'n_steps': tensor([284]), 'n_accepted': tensor([142]), 'n_initialized': tensor([1])}\n",
+      "status        tensor([4])\n",
+      "torch.Size([1, 15, 10])\n",
       "Epoch 1 complete! \tAverage loss train:  inf \tAverage loss test:  nan\n",
       " \tDONE!\n",
       "\n",
       ">>> Testing model...\n",
-      "{'n_f_evals': tensor([1940]), 'n_steps': tensor([323]), 'n_accepted': tensor([169]), 'n_initialized': tensor([3])}\n",
+      "len tstep     torch.Size([1, 15])\n",
+      "stats         {'n_f_evals': tensor([1706]), 'n_steps': tensor([284]), 'n_accepted': tensor([142]), 'n_initialized': tensor([1])}\n",
+      "status        tensor([4])\n",
+      "torch.Size([1, 15, 10])\n",
       "\n",
       "Test loss: 0.0\n"
      ]
@@ -147,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -173,13 +228,7 @@
       "        nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
       "        nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
       "        nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-      "        nan, nan, nan, nan, nan, nan, nan, nan, nan, nan])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "        nan, nan, nan, nan, nan, nan, nan, nan, nan, nan])\n",
       "tensor([ -6.6590, -12.9293, -14.7479, -15.0508, -12.0239,  -1.0706, -12.9758,\n",
       "        -16.8825, -20.0000, -14.1773, -10.5228, -20.0000, -15.9316, -11.8687,\n",
       "        -16.0555, -17.3482, -10.4098, -11.3593, -10.4886, -11.8720, -17.5386,\n",
@@ -324,8 +373,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([-0.5369,  0.1931,  0.1583, -0.3407, -0.3552, -0.0896,  1.4168, -0.4486,\n",
-       "        -0.1888, -0.1495], grad_fn=<LeakyReluBackward0>)"
+       "tensor([ 3.0915, -0.6866,  0.3844,  1.7464,  0.2254, -0.3953,  0.4832, -0.2686,\n",
+       "         2.5742, -0.1552], grad_fn=<LeakyReluBackward0>)"
       ]
      },
      "execution_count": 10,
@@ -348,8 +397,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0119,  0.0546,  0.2027, -0.0458, -0.0779, -0.1374,  0.1368, -0.2607,\n",
-      "         -0.3255,  0.0701]], grad_fn=<AddBackward0>)\n"
+      "tensor([[-0.4265,  0.9864,  2.9371,  2.6862,  1.3776, -0.7559,  2.1795,  3.0354,\n",
+      "          1.3280,  1.6925]], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
@@ -369,19 +418,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_f_evals': tensor([1820]), 'n_steps': tensor([303]), 'n_accepted': tensor([161]), 'n_initialized': tensor([2])}\n"
+      "len tstep     torch.Size([1, 15])\n",
+      "stats         {'n_f_evals': tensor([1802]), 'n_steps': tensor([300]), 'n_accepted': tensor([151]), 'n_initialized': tensor([2])}\n",
+      "status        tensor([4])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([[[nan, nan, nan,  ..., nan, nan, nan],\n",
-       "         [nan, nan, nan,  ..., nan, nan, nan],\n",
-       "         [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "tensor([[[ 0.1462,  0.1681,  0.1294,  ...,  0.3295,  0.1047,  0.1118],\n",
+       "         [ 0.2710,  0.3545,  0.2012,  ...,  0.4382,  0.0973,  0.1390],\n",
+       "         [ 2.5556,  0.5147, -0.2523,  ...,  2.1670,  3.1807,  1.4962],\n",
        "         ...,\n",
-       "         [nan, nan, nan,  ..., nan, nan, nan],\n",
-       "         [nan, nan, nan,  ..., nan, nan, nan],\n",
-       "         [nan, nan, nan,  ..., nan, nan, nan]]],\n",
+       "         [ 3.5045,  0.3892, -0.3558,  ...,  2.8308,  3.7902,  2.0354],\n",
+       "         [ 3.7316,  0.5359, -0.3947,  ...,  2.7301,  4.1807,  2.2367],\n",
+       "         [ 2.7527,  0.5188, -0.3495,  ...,  2.3339,  3.1799,  1.6008]]],\n",
        "       grad_fn=<ReshapeAliasBackward0>)"
       ]
      },
@@ -403,7 +454,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([2.3775, 2.5209])"
+       "tensor([1.8603, 1.2971])"
       ]
      },
      "execution_count": 13,
