--- a/train_dev.ipynb
+++ b/train_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,16 @@
     "plt.rcParams['figure.dpi'] = 150\n",
     "\n",
     "## import own functions\n",
-    "sys.path.insert(1, '/lhome/silkem/MACE/MACE/src/mace')\n",
-    "import autoencoder  as ae\n",
-    "import dataset      as ds\n",
-    "import train        as tr\n",
-    "import neuralODE    as nODE\n",
-    "import plotting     as pl"
+    "import src.mace.autoencoder  as ae\n",
+    "import src.mace.dataset      as ds\n",
+    "import src.mace.train        as tr\n",
+    "import src.mace.neuralODE    as nODE\n",
+    "import src.mace.plotting     as pl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -77,50 +76,29 @@
       "learning rate: 0.01\n",
       "\n",
       ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 1 complete! \tAverage loss train:  0.0002930232851540641 \tAverage loss test:  5.372220402932726e-05\n",
-      ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 2 complete! \tAverage loss train:  0.0003270372138148161 \tAverage loss test:  7.681574788875878e-05\n",
-      ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 3 complete! \tAverage loss train:  0.00030505649869606665 \tAverage loss test:  7.889718108344823e-05\n",
-      ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 4 complete! \tAverage loss train:  0.00027136240786948784 \tAverage loss test:  3.3844091376522556e-05\n",
-      ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 5 complete! \tAverage loss train:  0.0003403052956833067 \tAverage loss test:  4.382958650239743e-05\n",
-      ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 6 complete! \tAverage loss train:  0.0002252566568777947 \tAverage loss test:  4.154191628913395e-05\n",
-      ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 7 complete! \tAverage loss train:  0.0006890827905776795 \tAverage loss test:  0.0001927118719322607\n",
-      ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 8 complete! \tAverage loss train:  0.00022165042595952475 \tAverage loss test:  5.009526284993626e-05\n",
-      ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 9 complete! \tAverage loss train:  0.00031440516614787174 \tAverage loss test:  5.139349741511978e-05\n",
-      ">>> Training model...\n",
-      "\tbatch 9493 / 9493\n",
-      ">>> Validating model...\n",
-      "Epoch 10 complete! \tAverage loss train:  0.00038314197081303596 \tAverage loss test:  9.291891910834238e-05\n",
-      " \tDONE!\n",
-      "\n",
-      ">>> Testing model...\n",
-      "\tbatch 1 / 4069 , # nan 0\n",
-      "Test loss: 9.291891910834238e-05\n"
+      "\tbatch 1262 / 9493\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m## Training & validating model\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m loss_train_all, loss_test_all \u001b[39m=\u001b[39m tr\u001b[39m.\u001b[39;49mtrain(model, lr, data_loader, test_loader, epochs, DEVICE)\n\u001b[1;32m      4\u001b[0m n_test, n_test_hat, loss \u001b[39m=\u001b[39m tr\u001b[39m.\u001b[39mtest(model, test_loader, DEVICE)\n",
+      "File \u001b[0;32m/STER/silkem/MACE/src/mace/train.py:116\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, lr, data_loader, test_loader, epochs, DEVICE, plot, log, show)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m>>> Training model...\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    114\u001b[0m model\u001b[39m.\u001b[39mtrain()\n\u001b[0;32m--> 116\u001b[0m train_loss \u001b[39m=\u001b[39m train_one_epoch(data_loader, model, DEVICE, optimizer)\n\u001b[1;32m    117\u001b[0m loss_train_all\u001b[39m.\u001b[39mappend(train_loss)  \u001b[39m## save losses\u001b[39;00m\n\u001b[1;32m    119\u001b[0m \u001b[39m## Validating\u001b[39;00m\n",
+      "File \u001b[0;32m/STER/silkem/MACE/src/mace/train.py:41\u001b[0m, in \u001b[0;36mtrain_one_epoch\u001b[0;34m(data_loader, model, DEVICE, optimizer)\u001b[0m\n\u001b[1;32m     37\u001b[0m overall_loss \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     38\u001b[0m count_nan \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m---> 41\u001b[0m \u001b[39mfor\u001b[39;00m i, (n,p,t) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(data_loader):\n\u001b[1;32m     43\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39mbatch\u001b[39m\u001b[39m'\u001b[39m,i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m,\u001b[39mlen\u001b[39m(data_loader),end\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\r\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     45\u001b[0m     n \u001b[39m=\u001b[39m n\u001b[39m.\u001b[39mto(DEVICE)     \u001b[39m## op een niet-CPU berekenen als dat er is op de device\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/site-packages/torch/utils/data/dataloader.py:633\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    630\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    631\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    632\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 633\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[1;32m    634\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    635\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    636\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    637\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/site-packages/torch/utils/data/dataloader.py:1328\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1325\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_process_data(data)\n\u001b[1;32m   1327\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_shutdown \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tasks_outstanding \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m-> 1328\u001b[0m idx, data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_data()\n\u001b[1;32m   1329\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tasks_outstanding \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m   1330\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable:\n\u001b[1;32m   1331\u001b[0m     \u001b[39m# Check for _IterableDatasetStopIteration\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/site-packages/torch/utils/data/dataloader.py:1294\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._get_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1290\u001b[0m     \u001b[39m# In this case, `self._data_queue` is a `queue.Queue`,. But we don't\u001b[39;00m\n\u001b[1;32m   1291\u001b[0m     \u001b[39m# need to call `.task_done()` because we don't use `.join()`.\u001b[39;00m\n\u001b[1;32m   1292\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1293\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m-> 1294\u001b[0m         success, data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_try_get_data()\n\u001b[1;32m   1295\u001b[0m         \u001b[39mif\u001b[39;00m success:\n\u001b[1;32m   1296\u001b[0m             \u001b[39mreturn\u001b[39;00m data\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/site-packages/torch/utils/data/dataloader.py:1132\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._try_get_data\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1119\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_try_get_data\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m_utils\u001b[39m.\u001b[39mMP_STATUS_CHECK_INTERVAL):\n\u001b[1;32m   1120\u001b[0m     \u001b[39m# Tries to fetch data from `self._data_queue` once for a given timeout.\u001b[39;00m\n\u001b[1;32m   1121\u001b[0m     \u001b[39m# This can also be used as inner loop of fetching without timeout, with\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1129\u001b[0m     \u001b[39m# Returns a 2-tuple:\u001b[39;00m\n\u001b[1;32m   1130\u001b[0m     \u001b[39m#   (bool: whether successfully get data, any: data if successful else None)\u001b[39;00m\n\u001b[1;32m   1131\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1132\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_data_queue\u001b[39m.\u001b[39;49mget(timeout\u001b[39m=\u001b[39;49mtimeout)\n\u001b[1;32m   1133\u001b[0m         \u001b[39mreturn\u001b[39;00m (\u001b[39mTrue\u001b[39;00m, data)\n\u001b[1;32m   1134\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m   1135\u001b[0m         \u001b[39m# At timeout and error, we manually check whether any worker has\u001b[39;00m\n\u001b[1;32m   1136\u001b[0m         \u001b[39m# failed. Note that this is the only mechanism for Windows to detect\u001b[39;00m\n\u001b[1;32m   1137\u001b[0m         \u001b[39m# worker failures.\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/multiprocessing/queues.py:113\u001b[0m, in \u001b[0;36mQueue.get\u001b[0;34m(self, block, timeout)\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[39mif\u001b[39;00m block:\n\u001b[1;32m    112\u001b[0m     timeout \u001b[39m=\u001b[39m deadline \u001b[39m-\u001b[39m time\u001b[39m.\u001b[39mmonotonic()\n\u001b[0;32m--> 113\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_poll(timeout):\n\u001b[1;32m    114\u001b[0m         \u001b[39mraise\u001b[39;00m Empty\n\u001b[1;32m    115\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_poll():\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/multiprocessing/connection.py:257\u001b[0m, in \u001b[0;36m_ConnectionBase.poll\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    255\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_closed()\n\u001b[1;32m    256\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_readable()\n\u001b[0;32m--> 257\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_poll(timeout)\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/multiprocessing/connection.py:424\u001b[0m, in \u001b[0;36mConnection._poll\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    423\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_poll\u001b[39m(\u001b[39mself\u001b[39m, timeout):\n\u001b[0;32m--> 424\u001b[0m     r \u001b[39m=\u001b[39m wait([\u001b[39mself\u001b[39;49m], timeout)\n\u001b[1;32m    425\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mbool\u001b[39m(r)\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/multiprocessing/connection.py:931\u001b[0m, in \u001b[0;36mwait\u001b[0;34m(object_list, timeout)\u001b[0m\n\u001b[1;32m    928\u001b[0m     deadline \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mmonotonic() \u001b[39m+\u001b[39m timeout\n\u001b[1;32m    930\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m--> 931\u001b[0m     ready \u001b[39m=\u001b[39m selector\u001b[39m.\u001b[39;49mselect(timeout)\n\u001b[1;32m    932\u001b[0m     \u001b[39mif\u001b[39;00m ready:\n\u001b[1;32m    933\u001b[0m         \u001b[39mreturn\u001b[39;00m [key\u001b[39m.\u001b[39mfileobj \u001b[39mfor\u001b[39;00m (key, events) \u001b[39min\u001b[39;00m ready]\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.10/selectors.py:416\u001b[0m, in \u001b[0;36m_PollLikeSelector.select\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    414\u001b[0m ready \u001b[39m=\u001b[39m []\n\u001b[1;32m    415\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 416\u001b[0m     fd_event_list \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_selector\u001b[39m.\u001b[39;49mpoll(timeout)\n\u001b[1;32m    417\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mInterruptedError\u001b[39;00m:\n\u001b[1;32m    418\u001b[0m     \u001b[39mreturn\u001b[39;00m ready\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
