--- a/train_dev.ipynb
+++ b/train_dev.ipynb
@@ -276,7 +276,11 @@
       "\n",
       ">>> Training model...\n",
       "\n",
-      "\tbatch 1517 / 4638\r"
+      "\tbatch 4638 / 4638\n",
+      "Epoch 1 complete! \tAverage loss train:  nan \tAverage loss test:  nan\n",
+      "\tbatch 4638 / 4638\n",
+      "Epoch 2 complete! \tAverage loss train:  nan \tAverage loss test:  nan\n",
+      " \tDONE!\n"
      ]
     }
    ],
